--- a/app/views/image_infos/edit.html.erb
+++ b/app/views/image_infos/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit Image_info</h1>
 <%= render 'form' %>
 
-<%= link_to 'Show', Image_info %> |
-<%= link_to 'Back', new_image_infos_path %>
+<%= link_to 'Show', @Image_info %> |
+<%= link_to 'Back', image_infos_path %>
