--- a/app/views/sub_categories/edit.html.erb
+++ b/app/views/sub_categories/edit.html.erb
@@ -2,4 +2,4 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @sub_category %> |
-<%= link_to 'Back', @sub_categories_path %>
+<%= link_to 'Back', sub_categories_path %>
