--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,7 +1,7 @@
 <h1>Edit Category</h1>
 <%= render 'form' %>
 
-<%= link_to 'Show', sub_category %> |
-<%= link_to 'Back', new_sub_categories_path %>
+<%= link_to 'Show', @category %> |
+<%= link_to 'Back', categories_path %>
 
  
