--- a/app/views/image_infos/index.html.erb
+++ b/app/views/image_infos/index.html.erb
@@ -8,8 +8,12 @@
             <div style="width:400px; height:100">
             <h4><b><%= image_info.img_name %></b></h4> 
             <h4><b><%= image_info.img_type %></b></h4> 
-            <p><%= image_info.description %></p>
-            <h4><b><%= image_info.price %></b></h4> 
+            <h4><b><%= image_info.price %></b></h4>           
+            <h4><b><%= image_info.sub_category_id%></b></h4>
+             <div id ="likes">
+              <%= render partial: "likes" %>
+             </div> 
+            <p><%= image_info.likes.count %> <%= (image_info.likes.count) == 1 ? 'Like' : 'Likes'%></p>   
             <td><%= link_to 'Show', image_info %>   
             <td><%= link_to 'Edit', edit_image_info_path(image_info) %>
             <td><%= link_to 'Destroy', image_info, method: :delete, data: { confirm: 'Are you sure?' } %>
