--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,37 +1,51 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-   <div class="container">
-    <a class="navbar-brand" href="/">The ImagesAdda</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-    <span class="navbar-toggler-icon"></span>
-    </button>      
-    <% if user_signed_in? %>
-    <% if current_user.has_role?:admin%>
-    <li><%= link_to "Add Category", new_category_path %></li> 
-    <li><%= link_to "Add SubCategory", new_sub_category_path %></li> 
+    <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
+ 
+<div>
+   <a class="navbar-brand"href="/">The ImagesAdda</a>
+  
 
-    <%= select_tag "category", options_from_collection_for_select(Category.all, :id, :category_name), include_blank:"Select Category", :onchange => "update_subscategories_div(this.value)" %>
-     <div id="versionsDiv">
-    </div>      
-    <%end%>
-    <% end %>
+  <% if user_signed_in? %>
+  <% if current_user.has_role?:admin%>
+  <%= link_to "Categories", categories_path, class: "btn btn-outline-success my-2 my-sm-0" %>
+  <%= link_to  "SubCategory", sub_categories_path, class: "btn btn-outline-success my-2 my-sm-0" %>
+    <%= link_to "User_info", users_path, class: "btn btn-outline-success my-2 my-sm-0" %>
+
+
+  <%#= link_to  "Images", , class: "btn btn-outline-success my-2 my-sm-0" %>
+  <%#=else%>
+  <%#= link_to  "Images",'/' , class: "btn btn-outline-success my-2 my-sm-0" %>
+  <%end%>
+  <% end%>
+ 
+  
+   <% if current_user %>
+
+   <%= select_tag "category", options_from_collection_for_select(Category.all, :id, :category_name), include_blank:"Select Category" %>
+
+    <%= select_tag "sub_category", options_from_collection_for_select(SubCategory.all, :id, :sub_category_name), include_blank:"Select SubCategory" %>
+
    
-    <div class="collapse navbar-collapse" id=" navbarSupportedContent">        
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-        <%= link_to 'New ImageInfo', new_image_info_path %>
-        </li>
-      </ul>
+    <%= link_to 'Your Uploads', your_uploads_path , class: "btn btn-outline-success my-2 my-sm-0" %>  
+    <%= link_to 'Upload Image', new_image_info_path, class: "btn btn-outline-success my-2 my-sm-0" %>
 
-      <p class="navbar-text float-right">
-        <% if user_signed_in? %>
-        Logged in as <strong><%= current_user.email %></strong>.
-        <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
-        <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
-       <% else %>
-        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
-        <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
-       <% end %>
-      </p>        
-    </div>
-  </div>
-</nav>
+
+    <%= link_to 'Edit profile',edit_user_registration_path, class: "btn btn-outline-success my-2 my-sm-0" %>  
+    
+    <%= link_to 'Sign out',destroy_user_session_path, method: :delete, class: "btn btn-outline-success my-2 my-sm-0" %>  
+    <% else %>
+    <%= link_to 'Sign Up',new_user_registration_path, class: "btn btn-outline-success my-2 my-sm-0" %>  
+    <%= link_to 'Sign In',user_session_path, class: "btn btn-outline-success my-2 my-sm-0" %>
+    <h1>hello <%#= current_user.firstname %></h1>  </div>
+    <% end %>
+     
+     <div class="d-flex justify-content-right">
+        <div class="p-2 ">
+     <%= session[:current_user_email] %>
+     </div>
+     </div>
+
+     <form class="form-inline my-2 my-lg-0">
+     <!-- search -->
+   </form>
+
+  </nav>
