--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
  
   
    <% if current_user %>
-  <%= link_to 'Previous Carts',user_carts_carts_path, class: "btn btn-outline-success my-2 my-sm-0" %>  
+   <%= link_to 'your Carts',user_carts_carts_path, class: "btn btn-outline-success my-2 my-sm-0" %>  
 
    <%= select_tag "category", options_from_collection_for_select(Category.all, :id, :category_name), include_blank:"Select Category" %>
 
@@ -32,7 +32,7 @@
     <% else %>
     <%= link_to 'Create an Account',new_user_registration_path, class: "btn btn-outline-success my-2 my-sm-0" %>  
     <%= link_to 'Sign In',user_session_path, class: "btn btn-outline-success my-2 my-sm-0" %>
-    <h1> <%#= current_user.firstname %></h1>  </div>
+    <h1> <%#= current_user.firstname %></h1>  
     <% end %>
      
      <div class="d-flex justify-content-right">
