--- a/app/views/line_items/show.html.erb
+++ b/app/views/line_items/show.html.erb
@@ -7,7 +7,7 @@
 
 	<p>
 	  <strong>Cart:</strong>
-	  <%= @line_item.cart_id %>
+	  <%= @line_item.cart%>
 	</p>
 
 	<%= link_to 'Edit', edit_line_item_path(@line_item) %> |
